--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,21 +88,23 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5376]
+[INFO]  [/sys/mem] main [total=>10736,free=>4848,used=>54.84352]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
-[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 902 bytes)
-[INFO]  [/sys/router]
+[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 969 bytes)
+[WARN]  [/sys/router] auto-prefix not configured: noobj
+[INFO]  [/sys/router] 
   [
     router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
     scheduler=>[def_stack_size=>16192]
-    parser=>[stack_size=>64768]
-    vm=>[stack_size=>64768]
+    log=>[INFO=>[#],ERROR=>[#],WARN=>[#],TRACE=>[],DEBUG=>[]]
+    parser=>[stack_size=>32384]
+    vm=>[stack_size=>32384]
     mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,async=>true,cache_size=>50]
     wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
     ota=>[host=>mdns://fhatos_client:3232]
-    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],processor=>/sys/vm,nest=>2,ellipsis=>50,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>32384,stack_trace=>true]
+    console=>[terminal=>[stdout=>/io/terminal/:stdout,stdin=>/io/terminal/:stdin],processor=>/sys/vm,nest=>2,ellipsis=>50,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>16192,stack_trace=>true]
     fs=>[root=>./data/fs]
   ]@/boot/config
 [INFO]  [/sys/router] router boot config dropped
@@ -125,16 +127,11 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router] /io/log obj loaded
 [INFO]  [/sys/router] log boot config dropped
 [INFO]  [/sys/router] heap /mnt/cache spanning +/# mounted
-[INFO]  [/sys/type] /sys/structure/lib/fs/:create type defined
-[INFO]  [/sys/router] /io/lib/fs type imported
-[INFO]  [/mnt/disk] /home/killswitch/software/fhatos/build/docs/build/data/fs file system location mounted
-[INFO]  [/sys/router] fs /mnt/disk spanning /disk/# mounted
 [INFO]  [/sys/router] fs boot config dropped
-[INFO]  [/mnt/dsm] query processor /mnt/dsm/ attached
-[INFO]  [/mmadt/rec] mqtt://chibi.local:1883 mqtt fhatos_client connected
-[INFO]  [/sys/router] dsm /mnt/dsm spanning /shared/# mounted
 [INFO]  [/sys/router] mqtt boot config dropped
-[INFO]  [/sys/scheduler] /io/console thread spawned
+[INFO]  [/sys/router] console boot config dropped
+[INFO]  [/sys/mem] main [total=>85684,free=>78260,used=>8.66439]
+
 ----
 
 ++++
@@ -184,6 +181,8 @@ The [.h]#scheduler# controls and provides access to the various *processes* that
 ----
 fhatos> */sys/scheduler
 >[
+==>spawn=>[
+=>]
 ==>bundle=>[
 =>]
 ==>config=>[
@@ -192,9 +191,6 @@ fhatos> */sys/scheduler
 ==>::=>[
 ===>spawn=>spawn?thread<=obj{?}(thread=>_)[cpp]
 ===>bundle=>bundle?obj<=obj{?}(fiber=>_)[cpp]
-=>]
-==>thread=>[
-===>/io/console
 =>]
 >]@/sys/scheduler
 ----
@@ -220,12 +216,8 @@ The [.h]#router# is responsible for storing and retrieving `objs` from a pool of
 ----
 fhatos> */sys/router
 >[
-==>frame=>[rec][_]
 ==>config=>[
 ===>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
-=>]
-==>query=>[
-===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
 =>]
 ==>structure=>[
 ===>/sys/#
@@ -235,8 +227,6 @@ fhatos> */sys/router
 ===>/mmadt/#
 ===>/io/#
 ===>+/#
-===>/disk/#
-===>/shared/#
 =>]
 >]@/sys/router
 ----
@@ -259,6 +249,7 @@ The [.h]#mmADT# language is embedded in the fURI address space thus enabling htt
 fhatos> */mmadt/#/
 >[
 ==>/mmadt/and=>and?bool<=obj{?}(con?lst=>_)[cpp]
+==>/mmadt/append=>append?obj{?}<=uri(obj=>_)[cpp]
 ==>/mmadt/apply=>apply?obj{?}<=obj{?}(rhs=>_,args=>isa(/mmadt/rec))[cpp]
 ==>/mmadt/as=>as?obj{?}<=obj{?}(type?uri=>_)[cpp]
 ==>/mmadt/at=>at?obj{?}<=obj{?}(isa(/mmadt/uri))[cpp]
@@ -388,7 +379,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/rec/::/mmadt/plus=>plus(isa(/mmadt/rec))[cpp]
 ==>/mmadt/rec/::/mmadt/rshift=>rshift(isa(/mmadt/uri))[cpp]
 ==>/mmadt/rec/::/mmadt/within=>within(_)[cpp]
-==>/mmadt/ref=>ref?obj{?}<=uri(payload=>_,retain=>isa(/mmadt/bool))[cpp]
+==>/mmadt/ref=>ref?obj{?}<=uri(payload=>_,retain=>else(noobj))[cpp]
 ==>/mmadt/repeat=>repeat(code=>_,until=>true,emit=>false)[cpp]
 ==>/mmadt/rshift=>rshift()
 ==>/mmadt/split=>split(_)[cpp]
@@ -449,6 +440,7 @@ An `inst` written in C++.
 [source,mmadt]
 ----
 fhatos> *int::lt
+ hread spawned: loop?obj{?}<=console()[cpp] [stack size:16192]
 ==>lt?bool<=int(arg?int=>_)[cpp]
 ----
 
@@ -485,11 +477,11 @@ A [yellow]#f#​[fuchsia]#h#​[aqua]*A*​[lime]*T*​[red]*O*​[blue]#s#​ i
 [source,mmadt]
 ----
 fhatos> # -> noobj
-[ERROR] [/sys/router] # crosses multiple structures
-[INFO]  [/sys/router] 1 dsm(s) closing
-[INFO]  [/sys/router] 1 fs(s) closing
 [INFO]  [/sys/router] 7 heap(s) closing
-[INFO]  [/sys/router] router /sys/router stopped
+[ERROR] [/mnt/mmadt] unable to read /mmadt/ext/nat/::/mmadt
+[ERROR] [/mnt/mmadt] unable to read /mmadt/ext/nat
+[ERROR] [/mnt/mmadt] unable to read /mmadt/ext
+[ERROR] [/mnt/mmadt] unable to read /mmadt
 ----
 
 ++++
@@ -759,9 +751,9 @@ noobj
 fhatos> /mmadt/noobj[]
 fhatos> noobj[]
 fhatos> noobj
-fhatos>
+fhatos> 
 
-fhatos>
+fhatos> 
 
 ----
 
@@ -851,17 +843,17 @@ A https://en.wikipedia.org/wiki/Character_(computing)[char] is a `str` containin
 fhatos> *char
 ==>char?int<=str()
 	[merge(2).count().is(eq(1))]
-fhatos> char['a']@a
-==>char['a']@a
-fhatos> char['b']@b
-==>char['b']@b
+fhatos> === char['a']@a ===
+fhatos> === char['b']@b ===
 fhatos> @a + @b
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))]
-	  thrown at inst char['a']@a => plus(char['a']@a)[cpp] [0=>char['a']@a]
+[ERROR] [/mmadt/obj] /mmadt/plus inst unresolved 
+	         lhs id      inst id        resolve obj        
+	  ->[/mmadt/obj] /mmadt/plus => plus(_)
 fhatos> *a
-==>'aa'@a
 fhatos> @a.as(str) + @b
-==>'aaaa'@a
+[ERROR] [/sys/lang/parser] noobj is not a /mmadt/str as defined by [str][_] 
+		 \_/mmadt/str is not a subtype of /mmadt/str
+	  thrown at inst noobj => as?obj{?}<=obj{?}(type?uri=>str)[cpp] [type=>str]
 ----
 
 ++++
@@ -892,13 +884,13 @@ fhatos> *nat
 fhatos> nat[12]
 ==>nat[12]
 fhatos> nat[-30]
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/lang/parser] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
 fhatos> nat[12]@a
 ==>nat[12]@a
 fhatos> @a.minus(11)
 ==>nat[1]@a
 fhatos> @a.minus(2)
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/lang/parser] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
 	  thrown at inst nat[1]@a => minus(0?int=>2)[cpp] [0=>2]
 fhatos> *a
 ==>nat[1]@a
@@ -930,7 +922,7 @@ fhatos> C[0.0]
 fhatos> C[274.0]
 ==>C[274.000000]
 fhatos> C[-274.0]
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -274.00000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.14999))]
+[ERROR] [/sys/lang/parser] -274.00000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.14999))] 
 ----
 
 ++++
@@ -1040,7 +1032,7 @@ fhatos> 3.band(2,8)                           // <1>
 fhatos> 3.band(max=>8,min=>2)                 // <2>
 ==>3
 fhatos> 'abc'.band(2,8)                       // <3>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a str as defined by [str][_]
+[ERROR] [/sys/lang/parser] 2 is not a str as defined by [str][_] 
 		 \_/mmadt/int is not a subtype of /mmadt/str
 	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[is(and([gte(from(min)),lte(from(max))]))] [min=>2,max=>8]
 ----
@@ -1114,26 +1106,29 @@ This is a consequence of attaching a type query processor to the router frame st
 
 ++++
 <!-- 🐖 ./main_runner.out
-is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-10.is_divisible(2)
-10.is_divisible('abc')
+band -> |band?int{?}<=int(min?nat=>else(2),max?nat=>else(8))[is(and([gte(*min),lte(*max)]))]
+15.band(10,20)              --- <1>
+-15.band(-20,-10)           --- <2>
 -->
 ++++
 
 [source,mmadt]
 ----
-fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-==>is_divisble?bool<=int(by?int=>_)[mod(from(by)).eq(0)]
-fhatos> 10.is_divisible(2)
-==>true
-fhatos> 10.is_divisible('abc')
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_]
-		 \_/mmadt/str is not a subtype of /mmadt/int
+fhatos> band -> |band?int{?}<=int(min?nat=>else(2),max?nat=>else(8))[is(and([gte(*min),lte(*max)]))]
+==>band?int{?}<=int(min?nat=>else?noobj<=obj(2)[noobj],max?nat=>else?noobj<=obj(8)[noobj])
+	[is(and([gte(from(min)),lte(from(max))]))]
+fhatos> 15.band(10,20)              // <1>
+==>15
+fhatos> -15.band(-20,-10)           // <2>
+[ERROR] [/sys/lang/parser] -20 is not a nat as defined by nat()[is(gte(0))] 
 ----
 
 ++++
 <!-- 🐓 -->
 ++++
+
+<1> Argument name uniqueness does not consider query parameters.
+<2> The `?nat` query parameter requires the respective argument be some stem:[n \in \mathbb{N}].
 
 --
 
@@ -1166,19 +1161,7 @@ Finally, a degenerate anonymous `inst` with no specified variable frame is simpl
 
 [source,mmadt]
 ----
-fhatos> 10.(min=>2,max=>10)[is(and([gte(*min),lte(*max)]))]                // <1>
-[ERROR] [/sys/scheduler] noobj [[noobj][_]] not in range of inst(min=>2,max=>8)[is(and([gte(from(min)),lte(from(max))]))] [SIGNATURE HERE]
-fhatos> 10.(min=>minus(1),max=>plus(1))[is(and([gte(*min),lte(*max)]))]   // <2>
-==>10
-fhatos> 10.()[is(and([gte(*min),lte(*max)]))]                             // <3>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_]
-		 \_/mmadt/noobj is not a subtype of /mmadt/int
-	  thrown at inst 10 => inst()[is(and([gte(from(min)),lte(from(max))]))] [=>]
-fhatos> |((min=>2,max=>8)[is(and([gte(*min),lte(*max)]))])                // <4>
-==>inst?noobj<=obj(min=>2,max=>8)
-	[is(and([gte(from(min)),lte(from(max))]))]
-fhatos> 10.is(and([gte(minus(1)),lte(plus(1))]))                          // <5>
-==>10
+fhatos> 10.(min=>2,max=>8)[is(and([gte(*min),lte(*max)]))]                // <1>
 ----
 
 ++++
@@ -1211,7 +1194,7 @@ fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 fhatos> 10.is_divisible(2)
 ==>true
 fhatos> 10.is_divisible('abc')
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_]
+[ERROR] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
 		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
@@ -1245,7 +1228,7 @@ fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[i
 ==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
 	[is(gte(from(min))).is(lte(from(max)))]
 fhatos> 2.band(min=>1,max=>1)                 // <1>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_]
+[ERROR] [/sys/lang/parser] noobj is not a int as defined by [int][_] 
 		 \_/mmadt/noobj is not a subtype of /mmadt/int
 ----
 
@@ -1276,7 +1259,7 @@ fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('er
 fhatos> 10.is_divisible(2)
 error==>true
 fhatos> 10.is_divisible('abc')
-error[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_]
+error[ERROR] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
 		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
@@ -1415,7 +1398,7 @@ a -> 12
 [source,mmadt]
 ----
 fhatos> a -> 12
-==>12
+[INFO]  [/io/console] ==>12
 fhatos> *a.plus(10)
 ==>22
 fhatos> *a
@@ -1462,7 +1445,7 @@ fhatos> a?sub -> \|to(b)
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub
 >sub[
-==>source=>/io/console
+==>source=>/sys/scheduler
 ==>pattern=>a
 ==>on_recv=>to(b)
 >]
@@ -1558,24 +1541,28 @@ fhatos> thread[[loop=>^(
 ==>loop=>lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n'))
 ==>delay=>nat[0]
 ==>halt=>true
+==>..=>[
+===>config=>[stack_size=>noobj]
+=>]
 >]@t
 fhatos> @t.spawn()
 [INFO]  [/sys/scheduler] t thread spawned
-thread spawned: lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n')) [stack size:16192]
+[INFO]  [t] thread spawned: lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n')) [stack size:noobj]
 c: 0
 c: 1
 c: 2
 c: 3
 c: 4
 c: 5
-fhatos>
 c: 6
 c: 7
 c: 8
 c: 9
 c: 10
 [INFO]  [t] thread stopped
-fhatos> *c
+
+fhatos> fhatos> *c
+[INFO]  [/sys/scheduler] thread t unscheduled
 ==>11
 ----
 
@@ -1674,7 +1661,7 @@ fhatos> @a + 1
 fhatos> @a + 1
 ==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
+[ERROR] [/sys/lang/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))] 
 	  thrown at inst int8[128]@a => plus(0?int=>1)[cpp] [0=>1]
 ----
 
@@ -1887,7 +1874,7 @@ The router supports a chain `fos:frame` structures and, in this way, `fos:frame`
 [source,mmadt]
 ----
 fhatos> 34.make_bigger(a=>plus(10))[plus(*a)]
-==>88
+[INFO]  [/io/console] ==>88
 ----
 
 ++++
@@ -2086,12 +2073,9 @@ fhatos> true.[false=>0,true=>1]
 >]
 fhatos> true.i?bool<=bool(_)[and(_,*<0>)]
 [ERROR] [/sys/router] unable to read from true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1
-	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read
-[ERROR] [/sys/router] unable to read from true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1
-	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read
-[ERROR] [/sys/router] unable to read from true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1
-	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read
-[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a lst as defined by [lst][_]
+	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read[ERROR] [/sys/router] unable to read from true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1
+	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read[ERROR] [/sys/router] unable to read from true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1
+	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read[ERROR] [/sys/lang/parser] noobj is not a lst as defined by [lst][_] 
 		 \_/mmadt/noobj is not a subtype of /mmadt/lst
 	  thrown at inst noobj => true.i(noobj)[and(_,from(0))] [0=>noobj]
 fhatos> true.plus(false)
@@ -2125,6 +2109,26 @@ person[[name=>'lili',age=>129]]
 -->
 ++++
 
+[source,mmadt]
+----
+fhatos> person -> |[name?str=>_,age?nat=>?<120]
+>[
+==>name?str=>_
+==>age?nat=>is(lt(120))
+>]
+fhatos> person[[name=>'marko',age=>29]]
+>person[
+==>name?str=>'marko'
+==>age?nat=>29
+>]
+fhatos> person[[name=>'lili',age=>129]]
+[ERROR] [/sys/lang/parser] noobj is not a nat as defined by nat()[is(gte(0))] 
+		 \_[/mmadt/obj] /mmadt/gte?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id       resolve obj                                       
+	  ->[/mmadt/obj] /mmadt/gte => gte?bool<=obj{?}()
+	  thrown at inst noobj => nat()[is(gte(0))] [=>]
+----
+
 ++++
 <!-- 🐓 -->
 ++++
@@ -2140,6 +2144,20 @@ flow control::
 1.-|[is(gt(0))=>'good: {_}', _=>'bad:{_}']                --- <2>
 -->
 ++++
+
+[source,mmadt]
+----
+fhatos> 1.[a=>+10,b=>as(str).plus('abc')].[a=>mod(2),b=>+'def']   // <1>
+>[
+==>a=>1
+==>b=>'1abcdef'
+>]
+fhatos> 1.-|[is(gt(0))=>'good: {_}', _=>'bad:{_}']                // <2>
+>[
+==>is(gt(0))=>'good: 1'
+==>_=>noobj
+>]
+----
 
 ++++
 <!-- 🐓 -->
@@ -2191,12 +2209,12 @@ For instance, `if` is implemented with a two entry `rec`, where one entry maps t
 fhatos> /io/console/config/nest -> 0                  // <1>
 ==>0
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
-	         lhs id      inst id      resolve obj
+[ERROR] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
 	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
-	         lhs id      inst id      resolve obj
+[ERROR] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
 	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 ----
 
@@ -2237,14 +2255,14 @@ if-else::
 
 [source,mmadt]
 ----
-fhatos> {1,2,3}-|[
+fhatos> {1,2,3}-|[                           
           is(gt(2)) => mult(-1),      // <1>
           _         => mult(100)]     // <2>
 ==>1
 ==>2
 ==>3
-fhatos> {1,2,3}-|[
-          is(gt(2)) => mult(-1),
+fhatos> {1,2,3}-|[                           
+          is(gt(2)) => mult(-1),             
           _         => mult(100)]>-
 ==>100
 ==>200
@@ -2279,9 +2297,9 @@ switch::
 
 [source,mmadt]
 ----
-fhatos> {1,2,3}-<[
-          is(gt(0)) => mult(-1),
-          is(gt(1)) => mult(0),
+fhatos> {1,2,3}-<[                  
+          is(gt(0)) => mult(-1),   
+          is(gt(1)) => mult(0),    
           is(gt(2)) => _]
 >[
 ==>is(gt(0))=>-1
@@ -2298,9 +2316,9 @@ fhatos> {1,2,3}-<[
 ==>is(gt(1))=>0
 ==>is(gt(2))=>3
 >]
-fhatos> {1,2,3}-<[
-          is(gt(0)) => mult(-1),
-          is(gt(1)) => mult(0),
+fhatos> {1,2,3}-<[                 
+          is(gt(0)) => mult(-1),   
+          is(gt(1)) => mult(0),    
           is(gt(2)) => _]>-
 ==>-1
 ==>-2
@@ -2426,15 +2444,18 @@ a -> age[45]
 fhatos> age -> \|(is(gt(0)).is(lt(120)))
 ==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=obj(120)[noobj])[noobj]
 fhatos> a -> age[45]
-==>age[45]
+[ERROR] [/sys/lang/parser] 45 is not a age as defined by is(gt(0)).is(lt(120)) 
+		 \_[/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 fhatos> *a.inspect()
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
-	         lhs id      inst id      resolve obj
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+[ERROR] [/mmadt/obj] /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
+	         lhs id      inst id           resolve obj           
+	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
 fhatos> @a.inspect()
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
-	         lhs id      inst id      resolve obj
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+[ERROR] [/mmadt/obj] /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
+	         lhs id      inst id           resolve obj           
+	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
 ----
 
 ++++
@@ -2467,7 +2488,7 @@ fhatos> a -> 12
 ===>encoding=>int32_t
 =>]
 ==>sub=>[
-===>source=>/io/console
+===>source=>/sys/scheduler
 ===>pattern=>a
 ===>on_recv=>print(_)
 =>]
@@ -2504,16 +2525,15 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 [source,mmadt]
 ----
 fhatos> /type/int/nat -> |is(gt(0))
-[ERROR] [/sys/router] no mounted structure for /type/int/nat
-==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj]
+[ERROR] [/sys/router] no mounted structure for /type/int/nat  ==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj]
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
 fhatos> nat[3].plus(2)
 ==>nat[5]
 fhatos> nat[3].mult(-2)
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
 	  thrown at inst nat[3] => mult(0?int=>-2)[cpp] [0=>-2]
 ----
 
@@ -2570,10 +2590,8 @@ fhatos> /io/console/config/nest->3
 fhatos> */sys/router/#/
 >[
 ==>/sys/router=>[
-===>frame=>[rec][_]
 ===>config=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
-===>query=>[write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]]
-===>structure=>[/sys/#,/mnt/#,/boot/#,/fos/#,/mmadt/#,/io/#,+/#,/disk/#,/shared/#]
+===>structure=>[/sys/#,/mnt/#,/boot/#,/fos/#,/mmadt/#,/io/#,+/#]
 =>]@/sys/router
 >]
 ----
@@ -2620,7 +2638,7 @@ fhatos> a?sub -> |to(b)            // <3>
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub                     // <4>
 >sub[
-==>source=>/io/console
+==>source=>/sys/scheduler
 ==>pattern=>a
 ==>on_recv=>to(b)
 >]
